fix(web-components): fix vertical alignment of icons on side navigation
Fix vertical alignment of icons on side navigation component - both with normal navigation items (as
they were slightly off-centre) and when used in slotted links.

.#500

--- a/packages/web-components/src/components/ic-navigation-item/ic-navigation-item.css
+++ b/packages/web-components/src/components/ic-navigation-item/ic-navigation-item.css
@@ -350,6 +350,7 @@ svg {
 }
 
 .icon {
+  height: var(--ic-space-lg);
   width: var(--ic-space-xxl);
   margin-left: calc(-1 * var(--ic-space-md));
   flex: 0 1 0%;
